Bytecode generator should not get_from_scope something that may be a hole into a variable that is already live https://bugs.webkit.org/show_bug.cgi?id=184189

Reviewed by JF Bastien.

JSTests:

* stress/load-hole-from-scope-into-live-var.js: Added.
(result.eval.try.switch):
(catch):

Source/JavaScriptCore:

* bytecompiler/NodesCodegen.cpp:
(JSC::ResolveNode::emitBytecode):



Canonical link: https://commits.webkit.org/199741@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@230115 268f45cc-cd09-0410-ab3c-d52691b4dbfc